# pythontemplate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
pythontemplate/: __init__.py
scripts/: build  check  clean  install  lint  test
