[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pythontemplate"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Accent Design Group Ltd", email = "support@accentdesign.co.uk" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]
dependencies = [
    "asyncpg",
    "pydantic",
    "sqlalchemy",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/accentdesign/pythontemplate"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "mypy",
    "flake8",
    "black",
    "isort",
]
dev = [
    "autoflake",
    "flake8",
]

[tool.isort]
profile = "black"
known_third_party = []

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "pythontemplate.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
filterwarnings = []